fixed font size and spacing

--- a/WebAssets/css/main.css
+++ b/WebAssets/css/main.css
@@ -1557,7 +1557,8 @@
 		}
 
 	h3 {
-		font-size: 1em;
+		font-size: 1.3em;
+		margin-top: 0.2em;
 	}
 
 	h4 {
@@ -2257,7 +2258,7 @@
 		font-weight: 200;
 		height: 2.85em;
 		line-height: 2.95em;
-		padding: 0 1.5em;
+		/*padding: 0 1.5em;*/
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -2431,7 +2432,7 @@
 			border-bottom: none;
 			display: block;
 			width: 100%;
-			margin: 0 0 2em 0;
+			margin: 1.5em 0 0 0;
 			text-align: center;
 			border-radius: 4px;
 			box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -2448,8 +2449,8 @@
 				border-top-right-radius: 4px;
 			}
 
-			.thumbnails a h3 {
-				margin: 1em;
+			.thumbnails a {
+				margin: 1.5em 0 0 0;
 			}
 
 			.thumbnails a:hover {
@@ -2481,7 +2482,7 @@
 			}
 
 				.thumbnails a {
-					margin: 0 0 1.5em 0;
+					margin: 1.5em 0 0 0;
 				}
 
 				.thumbnails > div {
@@ -2505,7 +2506,7 @@
 			}
 
 				.thumbnails a {
-					margin: 0 0 2em 0 !important;
+					margin: 1.5em 0 0 0 !important;
 				}
 
 				.thumbnails > div {
@@ -2518,7 +2519,7 @@
 					}
 
 				.thumbnails h3 {
-					font-size: 1em;
+					font-size: 1.3em;
 				}
 
 		}
@@ -2626,11 +2627,16 @@
 	overflow: auto;
 	}
 
+	.project {
+	    margin-bottom: 0.8em;
+		min-height: 460px;
+	}
+
 /* Header */
 
 	#header {
 		text-align: center;
-		padding: 6em 0 4em 0;
+		padding: 6em 0 1em 0;
 	}
 
 		#header h1 {
